--- a/shipment/pom.xml
+++ b/shipment/pom.xml
@@ -87,6 +87,13 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 			<version>2.1.2.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
