--- a/shipment/src/main/resources/application.properties
+++ b/shipment/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.h2.console.enabled=true
 # Custom H2 Console URL
 spring.h2.console.path=/h2
 
-spring.application.name=shipment
+spring.application.name=shipments
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
